v.0.1.5 (created an advantages component)

--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -25,6 +25,9 @@
         font-weight: 700;
         text-decoration: none;
         color: #ffffff;
+        &:hover {
+            color: $buttons_color;
+        }
     }
     &__contacts {
         display: flex;
