--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -1,11 +1,11 @@
 .button {
     width:150px;
     height: 30px;
-    border-radius: 5px;
-    border: none;
+    border-radius: 8px;
+    border: 1px solid #830505;
+    box-shadow: inset 0 -5px 0 rgba(0, 0, 0, 0.12);
     font-weight: 500;
     font-size: 12px;
-    line-height: 19px;
     text-transform: uppercase;
     text-align: center;
     background-color: $buttons_color;
@@ -15,5 +15,8 @@
         width: 300px;
         height: 50px;
         font-size: 16px;
+    }
+    &:hover {
+        border: 1px solid #ffffff;
     }
 }
