--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,7 +1,7 @@
 .promo {
-    min-height: 650px;
-    padding: 21px 0 93px 0;
-    background: url(../../img/bg/promo_bg.jpg) center center/cover no-repeat;
+    min-height: 700px;
+    padding: 21px 0 90px 0;
+    background: url(../img/bg/promo_bg.jpg) center center/cover no-repeat;
     &__wrapper {
         display: flex;
         flex-direction: column;
