--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -3,7 +3,7 @@
     height: 30px;
     border-radius: 8px;
     border: 1px solid #830505;
-    box-shadow: inset 0 -5px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12);
     font-weight: 500;
     font-size: 12px;
     text-transform: uppercase;
@@ -15,6 +15,13 @@
         width: 300px;
         height: 50px;
         font-size: 16px;
+        box-shadow: inset 0 -5px 0 rgba(0, 0, 0, 0.12);
+    }
+    &_submit {
+        width: 100%;
+        height: 55px;
+        font-size: 16px;
+        box-shadow: inset 0 -5px 0 rgba(0, 0, 0, 0.12);
     }
     &:hover {
         border: 1px solid #ffffff;
