--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -3,6 +3,7 @@
     padding: 100px 0 92px 0;
     background: url(../img/bg/consultation_bg.jpg) center center/cover no-repeat;
     &__descr {
+        margin-top: 20px;
         font-size: 20px;
         font-weight: 500;
         color: #fff;
