v.0.4.0 (component carousel adapted for all devices)

--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -8,7 +8,7 @@
     font-size: 12px;
     text-transform: uppercase;
     text-align: center;
-    background-color: $buttons_color;
+    background-color: $buttons-color;
     color: #ffffff;
     &_main {
         margin-top: 67px;
