--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -26,7 +26,7 @@
         text-decoration: none;
         color: #ffffff;
         &:hover {
-            color: $buttons_color;
+            color: $buttons-color;
         }
     }
     &__contacts {
