--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -14,7 +14,7 @@
         font-weight: 300;
         font-size: 14px;
         line-height: 18px;
-        color: $fonts_color_black;
+        color: $fonts-color-black;
         img {
             display: block;
             margin: 0 auto;
