--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -50,7 +50,7 @@
             text-decoration: underline;
             color: #ffffff;
             &:hover {
-                color: $buttons_color;
+                color: $buttons-color;
             }
         }
     }
