--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,2 +1,5 @@
-$buttons-color: #C70101;
-$fonts-color-black: #0D0D0D;
+$button-color: #C70101;
+$button-top-color: #e70202;
+$border-color: #830505;
+$border-gray-color: #e8e8e8;
+$font-black-color: #0D0D0D;
