--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -2,13 +2,13 @@
     width:150px;
     height: 30px;
     border-radius: 8px;
-    border: 1px solid #830505;
+    border: 1px solid $border-color;
     box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12);
     font-weight: 500;
     font-size: 12px;
     text-transform: uppercase;
     text-align: center;
-    background-color: $buttons-color;
+    background-image: linear-gradient(to top, $button-color 0%, $button-top-color 100%);
     color: #ffffff;
     &_main {
         margin-top: 67px;
@@ -22,8 +22,21 @@
         height: 55px;
         font-size: 16px;
         box-shadow: inset 0 -5px 0 rgba(0, 0, 0, 0.12);
+        &:hover {
+            height: 54px;
+            width: 298px;
+            margin: 0 1px;
+            margin-top: 1px;
+        }
+    }
+    &_mini {
+        width: 131px;
+        height: 40px;
+        font-size: 14px;
     }
     &:hover {
-        border: 1px solid #ffffff;
+        border: none;
+        background-image: none;
+        background-color: $button-color;
     }
 }
