v.0.6.0 (component catalog adapted for all devices)

--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -142,6 +142,12 @@
         }  
     }
     .catalog {
+        &__tabs {
+            margin-top: 30px;
+        }
+        &__content {
+            margin-top: 30px;
+        }
         &__tab {
             height: 35px;
             div {
@@ -150,11 +156,16 @@
             }
         }
         &-item {
-            width: 250px;
+            width: 240px;
             margin: 10px;
             margin-top: 0;
+            margin-bottom: 20px;
             &__content {
                 width: 210px;
+                transform: translateX(-110%);
+                &_active {
+                    transform: translateX(0%);
+                }
             }
             &__price {
                 font-size: 16px;
@@ -167,6 +178,9 @@
             }
             &__list {
                 width: 210px;
+                &_active {
+                    transform: translateX(-100%);
+                }
                 li {
                     font-size: 13px;
                     margin-bottom: 10px;
@@ -282,4 +296,41 @@
             }
         }  
     } 
+    .catalog {
+        &__tabs {
+            margin-top: 30px;
+        }
+        &__tab {
+            height: 30px;
+            div {
+                font-size: 10px;
+                line-height: 30px;
+            }
+        }
+        &__content {
+            margin-top: 30px;
+        }
+        &-item {
+            width: 300px;
+            margin: 0;
+            margin-bottom: 30px;
+            &__content {
+                width: 250px;
+                transform: translateX(-110%);
+                &_active {
+                    transform: translateX(0%);
+                }
+            }
+            &__list {
+                width: 250px;
+                transform: translateX(0%);
+                &_active{
+                    transform: translateX(-95%);
+                }
+            }
+        }
+    }
+    .button {
+        display: inline-block;
+    }
 }
