--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -48,6 +48,15 @@
             margin-bottom: 30px;
         }
     }
+    .reviews {
+        &-item {
+            &__img {
+                img {
+                    margin-right: 40px;
+                }
+            }
+        }
+    }
 }
 
 
@@ -191,7 +200,18 @@
     .button_mini {
         width: 90px;
         height: 35px;
-    }    
+    }  
+    .reviews {
+        &-item {
+            &__img {
+                img {
+                    margin-right: 30px;
+                    width: 144px;
+                    height: 144px;
+                }
+            }
+        }
+    }  
 }
 
 
@@ -332,5 +352,24 @@
     }
     .button {
         display: inline-block;
+    }
+    .reviews {
+        &-item {
+            margin-top: 40px;
+            flex-direction: column;
+            &__img {
+                img {
+                    display: block;
+                    margin: 0 auto;
+                    margin-bottom: 10px;
+                }
+            }
+            &__text {
+                width: 300px;
+            }
+            &__header, &__subheader, &__descr {
+                text-align: center;
+            }
+        }
     }
 }
