--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -51,9 +51,7 @@
     .reviews {
         &-item {
             &__img {
-                img {
-                    margin-right: 40px;
-                }
+                margin-right: 40px;
             }
         }
     }
@@ -209,6 +207,9 @@
                     width: 144px;
                     height: 144px;
                 }
+                margin-right: 30px;
+                width: 144px;
+                height: 144px;
             }
         }
     }  
@@ -358,11 +359,9 @@
             margin-top: 40px;
             flex-direction: column;
             &__img {
-                img {
-                    display: block;
-                    margin: 0 auto;
-                    margin-bottom: 10px;
-                }
+                display: block;
+                margin: 0 auto;
+                margin-bottom: 10px;
             }
             &__text {
                 width: 300px;
