--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,6 +21,7 @@
 @import 'blocks/carousel';
 @import 'blocks/catalog';
 @import 'blocks/reviews';
+@import 'blocks/footer';
 
 
 @import 'blocks/media';
