--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -37,7 +37,7 @@
         img {
             width: 31px;
             height: 50px;
-            &:hover {
+            &:active {
                 height: 48px;
                 margin-top: 2px;
             }
