--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,6 +22,7 @@
 @import 'blocks/catalog';
 @import 'blocks/reviews';
 @import 'blocks/footer';
+@import 'blocks/modal';
 
 
 @import 'blocks/media';
