--- a/src/sass/blocks/_reviews.scss
+++ b/src/sass/blocks/_reviews.scss
@@ -1,5 +1,6 @@
 .reviews {
     min-height: 920px;
+    padding-bottom: 60px;
     &__wrapper {
         display: flex;
         flex-direction: column;
