--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -353,6 +353,18 @@
     }
     .button {
         display: inline-block;
+        &_submit {
+            width: 280;
+            height: 55px;
+            font-size: 16px;
+            box-shadow: inset 0 -5px 0 rgba(0, 0, 0, 0.12);
+            &:hover {
+                height: 54px;
+                width: 278px;
+                margin: 0 1px;
+                margin-top: 1px;
+            }
+        }
     }
     .reviews {
         &-item {
@@ -394,5 +406,23 @@
                 }
             }
         }
+    }
+    .modal {
+        width: 300px;
+        min-height: 400px;
+        padding: 18px 10px;
+        &__close {
+            right: 2px;
+        }
+        &__subtitle {
+            margin-top: 5px;
+            font-size: 16px;
+        }
+        &__descr {
+            font-size: 13px;
+        }
+    }
+    .feed-form {
+        width: 280px;
     }
 }
