--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -8,4 +8,13 @@
         font-weight: 500;
         color: #fff;
     }
+    .error {
+        border: 1px solid $button-color;
+        text-align: center;
+        margin-bottom: 15px;
+    }
+    label.error {
+        color: #fff;
+        border: none;
+    }
 }
