--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -39,6 +39,14 @@
     &_mini {
         min-height: 140px;
     }
+    .error {
+        border: 1px solid $button-color;
+        text-align: center;
+        margin-bottom: 15px;
+    }
+    label.error {
+        border: none;
+    }
 }
 
 #consultation, #order, #thanks {
