v. 1.3.0 (animated review cards on scroll)

--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -1,7 +1,8 @@
 .catalog {
+    padding-top: 30px;
     padding-bottom: 80px;
     &__tabs {
-        margin-top: 70px;
+        margin-top: 50px;
         list-style-type: none;
         display: flex;
         justify-content: center;
