--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,7 +1,7 @@
 .promo {
-    min-height: 650px;
+    min-height: 100vh;
     padding: 21px 0 60px 0;
-    background: url(../img/bg/promo_bg.jpg) center center/cover no-repeat;
+    background: url(../img/bg/promo_bg.jpg) no-repeat 50%/cover;
     &__wrapper {
         display: flex;
         flex-direction: column;
