--- a/src/sass/blocks/_reviews.scss
+++ b/src/sass/blocks/_reviews.scss
@@ -8,7 +8,13 @@
     }
     &-item {
         display: flex;
-        margin-top: 60px;
+        margin-top: 60px;opacity: 0;
+        transform: translateY(100px);
+        transition: all 1s;
+        &.active {
+            opacity: 1;
+            transform: translateY(0);
+        }
         &__img {
             margin-right: 60px;
             width: 169px;
